argocd/actual-budget/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: actual-budget
spec:
  replicas: 1
  selector:
    matchLabels:
      app: actual-budget
  serviceName: actual-budget
  template:
    metadata:
      labels:
        app: actual-budget
      annotations:
        backup.velero.io/backup-volumes: data
    spec:
      containers:
        - name: actual-budget
          image: harbor.yanello.net/ghcr/actualbudget/actual-server:26.9.0@sha256:552beab3dec8c93d46b8b9245612d63c3f123b8a45063a474f53e229b17621d3
          ports:
            - containerPort: 5006
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /data
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 512Mi
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: truenas-ssd
        resources:
          requests:
            storage: 2Gi
