argocd/actual-budget/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: actual-budget
spec:
  parentRefs:
    - name: cilium-private-gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - actual.yanello.net
  rules:
    - backendRefs:
        - name: actual-budget
          port: 5006
