argocd/actual-budget/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: actual-budget
spec:
  endpointSelector:
    matchLabels:
      app: actual-budget
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "5006"
              protocol: TCP
  egress:
    - toFQDNs:
        - matchName: authentik.yanello.net
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
